err/overc.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/overc'...
Listing './lib/python3.5/site-packages/overc/lib'...
Listing './lib/python3.5/site-packages/overc/lib/db'...
Listing './lib/python3.5/site-packages/overc/lib/flask'...
Listing './lib/python3.5/site-packages/overc/src'...
Listing './lib/python3.5/site-packages/overc/src/bps'...
Listing './lib/python3.5/site-packages/overc/src/bps/api'...
Listing './lib/python3.5/site-packages/overc/src/bps/ui'...
Listing './lib/python3.5/site-packages/overc/src/bps/ui/static'...
Listing './lib/python3.5/site-packages/overc/src/bps/ui/static/.sass-cache'...
Listing './lib/python3.5/site-packages/overc/src/bps/ui/static/.sass-cache/29e5c4e27b43ecbdf4f6c49f0fe0ea981ceb4ee0'...
Listing './lib/python3.5/site-packages/overc/src/bps/ui/static/.sass-cache/2e1d2f46c6cae5ae69b1d1812f18525b2f332aa0'...
Listing './lib/python3.5/site-packages/overc/src/bps/ui/static/.sass-cache/2f9e03b9000d023d16910c5fd156d242f3c3e096'...
Listing './lib/python3.5/site-packages/overc/src/bps/ui/static/.sass-cache/3033fbe1338f6ef725832e8a1e7cdf5e9ed67de8'...
Listing './lib/python3.5/site-packages/overc/src/bps/ui/static/.sass-cache/35dedc88a7b3ac1e6298f508cd60c4369f8eb5a3'...
Listing './lib/python3.5/site-packages/overc/src/bps/ui/static/.sass-cache/4a0ef57fbc3f3cbf07958219bab54a6fdb6ae05b'...
Listing './lib/python3.5/site-packages/overc/src/bps/ui/static/.sass-cache/5f442e432e16ad71d553a4cdb07a7ba092c488ba'...
Listing './lib/python3.5/site-packages/overc/src/bps/ui/static/.sass-cache/7273435bef2b0d7ff7a1f2202adfbdf4a67d1216'...
Listing './lib/python3.5/site-packages/overc/src/bps/ui/static/.sass-cache/76e9449d62aa89e0f896d28f537384d0c42878ae'...
Listing './lib/python3.5/site-packages/overc/src/bps/ui/static/.sass-cache/79f9fd64dcd5be2c29e668529e79be35840e250b'...
Listing './lib/python3.5/site-packages/overc/src/bps/ui/static/.sass-cache/7bf0d5e66abc62330cabd70b4ad1207cc6165d88'...
Listing './lib/python3.5/site-packages/overc/src/bps/ui/static/.sass-cache/880e82a550bad860bc1df7a6acdb9efab9082561'...
Listing './lib/python3.5/site-packages/overc/src/bps/ui/static/.sass-cache/cb594caa2c3bf9bb3643ac21bf361d4c4670f804'...
Listing './lib/python3.5/site-packages/overc/src/bps/ui/static/.sass-cache/d4fe06df9505feb69861684bfc38af0721bf4938'...
Listing './lib/python3.5/site-packages/overc/src/bps/ui/static/.sass-cache/ede792fbf8780b94212f443ea8228a0269a4d76e'...
Listing './lib/python3.5/site-packages/overc/src/bps/ui/static/img'...
Listing './lib/python3.5/site-packages/overc/src/bps/ui/static/img/icons'...
Listing './lib/python3.5/site-packages/overc/src/bps/ui/static/sass'...
Listing './lib/python3.5/site-packages/overc/src/bps/ui/static/sass/lib'...
Listing './lib/python3.5/site-packages/overc/src/bps/ui/static/sass/partials'...
Listing './lib/python3.5/site-packages/overc/src/bps/ui/templates'...
Listing './lib/python3.5/site-packages/overc/src/bps/ui/templates/pages'...
Listing './lib/python3.5/site-packages/overc-1.0.9.post1.egg-info'...
Listing './lib/python3.5/site-packages/overcli'...
Compiling './lib/python3.5/site-packages/overcli/monitor.py'...
***   File "./lib/python3.5/site-packages/overcli/monitor.py", line 80
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './share'...
Listing './share/python-wheels'...
